--- a/public/app/index.html
+++ b/public/app/index.html
@@ -38,7 +38,7 @@
         width: 600,
         height: 150,
         octaves: 2,
-        startNote: 'A3',
+        startNote: 'C3',
         whiteNotesColour: 'white',
         blackNotesColour: 'black',
         hoverColour: '#f3e939'
