--- a/public/app/index.html
+++ b/public/app/index.html
@@ -9,11 +9,14 @@
 
     <!-- Bootstrap -->
     <link href="assets/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!--font awesome-->
+    <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!--custom-->
     <link href="assets/stylesheets/stylesheet.css" rel="stylesheet">
     <!--ngular-->
     <script src="assets/angular/angular.min.js"></script>
     <script src="assets/scripts/qwerty-hancock.min.js"></script>
+
     <script src="app.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -23,26 +26,39 @@
     <![endif]-->
 </head>
 <body ng-app="waw" ng-controller="mainController as main">
-<h1>{{ main.message }}</h1>
-<master-gain></master-gain>
-<filter></filter>
-<button add-component="device" type="button" ng-click="createNew()">Add new</button>
-<hr/>
-<div ng-controller="devicesController">
-
+<div id="top-bar" class="container-fluid">
+    <div class="row">
+        <div class="col-sm-6">
+            <h3>{{main.message}}</h3>
+        </div>
+        <div class="col-sm-6 text-right">
+            <h3>{controls}</h3>
+        </div>
+    </div>
 </div>
-<div id="keyboard"></div>
-<script>
-    var keyboard = new QwertyHancock({
-        id: 'keyboard',
-        width: 600,
-        height: 150,
-        octaves: 2,
-        startNote: 'C3',
-        whiteNotesColour: 'white',
-        blackNotesColour: 'black',
-        hoverColour: '#f3e939'
-    });
-</script>
+
+<div class="container" ng-controller="devicesController as devices">
+    <div class="row device-block">
+        <div class="device" device data-id="square synth" ng-class="getDeviceClass()" data-instrument="simple synthesizer"></div>
+    </div>
+    <div class="row device-block">
+        <div class="device" device data-id="sine synth" ng-class="getDeviceClass()" data-instrument="Another synthesizer"></div>
+    </div>
+    <div class="row device-block">
+        <div class="device" device data-id="another square synth" ng-class="getDeviceClass()" data-instrument="simple synthesizer"></div>
+    </div>
+</div>
+<!--<master-gain></master-gain>-->
+<!--<filter></filter>-->
+<!--<button add-component="device" type="button" ng-click="createNew()">Add new</button>-->
+<hr/>
+<div ng-controller="InstrumentsController as instruments">
+    <div ng-repeat="(key, value) in instruments.instruments.availableInstruments">
+        {{key}}
+    </div>
+</div>
+<div style="clear: both;"></div>
+<keyboard octave="3" class="keyboard"></keyboard>
+
 </body>
 </html>
