--- a/public/app/index.html
+++ b/public/app/index.html
@@ -13,8 +13,6 @@
     <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!--custom-->
     <link href="assets/stylesheets/stylesheet.css" rel="stylesheet">
-    <!--Lodash lib-->
-    <script src="https://cdn.rawgit.com/lodash/lodash/3.0.1/lodash.min.js"></script>
     <!--ngular-->
     <script src="assets/angular/angular.min.js"></script>
 
@@ -111,6 +109,9 @@
 <!--<keyboard octave="2" class="keyboard"></keyboard>-->
 <div id="instrument-settings" class="container">
 
+</div>
+<div class="footer">
+    <span><a href="mailto:haroldas@latonas.eu?Subject=Hello">Haroldas Latonas</a></span>
 </div>
 </body>
 </html>
