--- a/public/app/index.html
+++ b/public/app/index.html
@@ -54,8 +54,11 @@
                     <input class="bpm" placeholder="120BPM" size="3">
                 </div>
                 <div class="col-sm-2">
-                    <div align="right" class="play-button">
+                    <div align="right" ng-click="play()" class="play-button">
                         <span class="fa fa fa-play"></span>
+                    </div>
+                    <div class="x" ng-hide="xhide">
+                        <img src="../assets/images/x.gif"/>
                     </div>
                 </div>
             </div>
