--- a/public/app/index.html
+++ b/public/app/index.html
@@ -121,7 +121,7 @@
 
 </div>
 <div class="footer">
-    <span><a href="mailto:haroldas@latonas.eu?Subject=Hello">Haroldas Latonas</a></span>
+    <span><a href="mailto:haroldas.latonas@mtcmedia.co.uk?Subject=Hello">Haroldas Latonas</a></span>
 </div>
 </body>
 </html>
